@@ -135,6 +135,8 @@ common.type=Type
 common.refreshCommPorts=Refresh Comm Port List
 common.test=Test
 common.updating=Updating...
+common.processLogs=Process logs
+common.chooseFile=Choose file
 
 common.access.none=none
 common.access.read=read
